# spherebot

install/: local_setup.sh  setup.sh
install/autonomous_control_pid/share/autonomous_control_pid/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/autonomous_control_pid/share/autonomous_control_pid/cmake/: autonomous_control_pidConfig.cmake
install/control_lib/include/control_lib/: auxilary_arduino.hpp  kinematic_transforms.hpp
install/control_lib/share/control_lib/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/control_lib/share/control_lib/cmake/: ament_cmake_export_libraries-extras.cmake  control_libConfig.cmake  export_control_libExport.cmake
install/data_logger_pkg/lib/data_logger_pkg/: data_logger_node
install/data_logger_pkg/share/data_logger_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dfr_10_dof_pkg/lib/dfr_10_dof_pkg/: environmental_node  imu_data_node
install/dfr_10_dof_pkg/share/dfr_10_dof_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/gps_read_cpp/lib/gps_read_cpp/: gps_read
install/gps_read_cpp/share/gps_read_cpp/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/i2c_lib/include/i2c_lib/: i2c_interface.hpp
install/i2c_lib/share/i2c_lib/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/i2c_lib/share/i2c_lib/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  export_i2c_libExport-noconfig.cmake  i2c_libConfig.cmake
install/joystick_reader/lib/joystick_reader/: joystick_reader_node
install/joystick_reader/share/joystick_reader/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/joystick_reader/share/joystick_reader/cmake/: joystick_readerConfig.cmake
install/motor_control/share/motor_control/: local_setup.sh  package.sh
install/remote_control_cpp/share/remote_control_cpp/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/remote_control_cpp/share/remote_control_cpp/cmake/: remote_control_cppConfig.cmake
log/: latest_build
src/autonomous_control_lqg/: CMakeLists.txt  package.xml
src/autonomous_control_lqg/src/: autonomous_control_lqg_node.cpp
src/autonomous_control_pid/: CMakeLists.txt  package.xml
src/autonomous_control_pid/data/: path_north.json  plot_path.py  test_path.json
src/autonomous_control_pid/include/autonomous_control_pid/: autonomous_control_pid_node.hpp
src/autonomous_control_pid/launch/: autonomous_control_PID_launch.py
src/autonomous_control_pid/src/: autonomous_control_pid_node.cpp
src/control_lib/: CMakeLists.txt
src/control_lib/include/control_lib/: LowPassFilter.hpp  LowpassFilter.hpp  PID_controller.hpp  PathDataLoader.hpp  auxilary_arduino.hpp  geodeticConverter.hpp  kinematic_transforms.hpp  motorControl.hpp  stanleyControl.hpp
src/control_lib/src/: LowPassFilter.cpp  LowpassFilter.cpp  PID_controller.cpp  PathDataLoader.cpp  auxilary_arduino.cpp  geodeticConverter.cpp  kinematic_transforms.cpp  load_path_json.cpp  motorControl.cpp  stanleyControl.cpp
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/msg/: MotorData.msg
src/data_logger_pkg/: setup.py
src/data_logger_pkg/data/: adjusted_heading.csv  compensated_heading.csv  environment_data_pressure_pa.csv  gps_point_data.csv  imu_data.csv  motor_joint_vars.csv  motor_joint_vars_state.csv  plot_live.py  plot_state_errors.py
src/data_logger_pkg/data/test 7 leveling/: compensated_heading.csv  environment_data_temp_degrees.csv  gps_point_data.csv  motor_joint_vars.csv  motor_joint_vars_state.csv
src/data_logger_pkg/data/test1/: compensated_heading.csv  gps_point_data.csv  motor_joint_vars.csv  motor_joint_vars_state.csv
src/data_logger_pkg/data/test2/: compensated_heading.csv  gps_point_data.csv  heading_ref.csv  motor_joint_vars.csv  motor_joint_vars_state.csv
src/data_logger_pkg/data/test3/: compensated_heading.csv  gps_point_data.csv  heading_ref.csv  motor_joint_vars.csv  motor_joint_vars_state.csv
src/data_logger_pkg/data/test5 autonomous 2/: compensated_heading.csv  environment_data_pressure_pa.csv  environment_data_temp_degrees.csv  gps_point_data.csv  heading_ref.csv  motor_joint_vars.csv  motor_joint_vars_state.csv
src/data_logger_pkg/data_logger_pkg/: data_logger_node.py
src/dfr_10_dof_pkg/: CMakeLists.txt  package.xml
src/dfr_10_dof_pkg/data/: calculate_calib.py  mag_out.txt  out.txt  plot_calib_live.py
src/dfr_10_dof_pkg/include/dfr_10_dof_pkg/: BMP280.hpp  FIMU_ADXL345.h  FIMU_ITG3200.h  VCM5883L.h  calibrate_magnetometer_node.hpp  environmental_data_node.hpp  imu_data_node.hpp  magnetometer_data_node.hpp
src/dfr_10_dof_pkg/src/: BMP280.cpp  FIMU_ADXL345.cpp  FIMU_ITG3200.cpp  VCM5883L.cpp  calibrate_magnetometer_node.cpp  environmental_data_node.cpp  imu_data_node.cpp  magnetometer_data_node.cpp
src/gps_read_cpp/: CMakeLists.txt  package.xml
src/gps_read_cpp/include/gps_read_cpp/: TinyGPS++.h  gps_read.h
src/gps_read_cpp/src/: TinyGPS++.cpp  gps_read.cpp
src/i2c_lib/: CMakeLists.txt
src/i2c_lib/src/: i2c_interface.cpp
src/joystick_reader/: CMakeLists.txt  package.xml
src/joystick_reader/include/joystick_reader/: joystick_reader_node.hpp
src/joystick_reader/src/: .joystick_reader_node.cpp.swp  joystick_reader_node.cpp
src/motor_control/: CMakeLists.txt  package.xml
src/motor_control/include/motor_control/: motorControl.hpp  motor_control_node.hpp
src/motor_control/src/: motorControl.cpp  motor_control_node.cpp
src/remote_control_cpp/: CMakeLists.txt  package.xml
src/remote_control_cpp/data_logging/: motor_speed_data.csv  plot_data.py
src/remote_control_cpp/include/remote_control_cpp/: remote_control_node.hpp
src/remote_control_cpp/launch/: remote_control_launch.py
src/remote_control_cpp/src/: remote_control_node.cpp
(+6 files in other folders)
